# UVLLM_reproduce

./: .gitignore  README.md  file_process.py  parser.out  parsetab.py  pixi.toml
UVLLM/: Main.py  api.py
UVLLM/Benchmark/: HWBenchmark.py
UVLLM/rtlrepair/: preprocess.py
benchmarks/: ErrorSet.conf  rtl.conf  test.v
benchmarks/ErrorSet/decoder_3to8/: decoder_3to8_buggy5.v  design_description.txt  oracle_tb.vcd  testbench.v
benchmarks/ErrorSet/first_counter/: design_description.txt  first_counter.v  first_counter_buggy1.v  first_counter_buggy6.v  oracle_tb.vcd  testbench.v
benchmarks/ErrorSet/fsm_full/: design_description.txt  fsm_full_buggy1.v  oracle_tb.vcd  test.txt  test.vcd  testbench.v
benchmarks/ErrorSet/keccak/: keccak.v  keccak_buggy1.v  keccak_buggy2.v  keccak_buggy3.v  oracle_tb.txt  oracle_tb.vcd
benchmarks/ErrorSet/lshift_reg/: design_description.txt  lshift_reg_buggy1.v  oracle_tb.txt  oracle_tb.vcd  testbench.v
benchmarks/ErrorSet/mux_4to1_case/: design_description.txt  mux_4to1_case_buggy1.v  mux_test.vcd  test.vcd  testbench.v
benchmarks/ErrorSet/padder/: oracle_tb.vcd  padder.v  (+3 more)
benchmarks/rtl/i2c_master/: CMakeLists.txt
benchmarks/rtl/i2c_master/cases/2/: i2c_master_top.v  i2c_master_top_orig.v  testbench.v
benchmarks/rtl/i2c_master/cases/3/: design_description.txt  i2c_master_top.v  testbench.v
benchmarks/rtl/i2c_master/cases/k1/: i2c_master_bit_ctrl.v
benchmarks/rtl/i2c_master/gold/: testbench.v
benchmarks/rtl/i2c_master/inc/: wb_master_model.v
rtl/: ErrorSet.conf  rtl.conf
rtl/reed/: input_RS_blocks  rs_block_format.py
(+405 files in other folders)
